@@ -1,5 +1,8 @@
 == HEAD
 
+Features:
+* #853 - `Mail::Message#set_sort_order` overrides the default message part sort order. (rafbm)
+
 Compatibility:
 * #655 - Sort attachments to the end of the parts list to work around email clients that may mistake a text attachment for the message body. (npickens)
 
